[gd_scene load_steps=3 format=3 uid="uid://c1n1eoykc148g"]

[ext_resource type="Script" uid="uid://bgg3uj277v85f" path="res://addons/Ds_levels/ui/texture_file_picker.gd" id="1_qn1gw"]
[ext_resource type="PackedScene" uid="uid://dvd6im2at4f60" path="res://addons/Ds_levels/ui/file_picker.tscn" id="1_yjq22"]

[node name="texture_file_picker" type="HBoxContainer"]
offset_right = 207.0
offset_bottom = 32.0
theme_override_constants/separation = 0
script = ExtResource("1_qn1gw")

[node name="texture_rext" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
expand_mode = 1
stretch_mode = 5

[node name="file_picker" parent="." instance=ExtResource("1_yjq22")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="path_changed" from="file_picker" to="." method="_on_file_picker_path_changed"]
[connection signal="path_selected" from="file_picker" to="." method="_on_file_picker_path_selected"]
